--- a/src/sass/CreditsComponent/main.scss
+++ b/src/sass/CreditsComponent/main.scss
@@ -16,7 +16,7 @@
         object-fit: cover;
         object-position: center;
         opacity: 0.9;
-        transform: translate3D(-50%, -50%, 1px);
+        transform: translate3D(-50%, -50%, 0);
     }
 
     .main-title {
