--- a/src/sass/ProjectComponent/main.scss
+++ b/src/sass/ProjectComponent/main.scss
@@ -230,7 +230,7 @@
             max-height: calc(100vh - 144px);
             min-height: 568px;
             left: 50%;
-            transform: translate3D(-50%, 0, 1px);
+            transform: translate3D(-50%, 0, 0);
             width:100%;
             height: 768px;
             margin-bottom: 48px;
@@ -242,7 +242,7 @@
             box-sizing: border-box;
             position: absolute;
             top: 0;
-            transform: translate3D(0, -120%, 1px);
+            transform: translate3D(0, -120%, 0);
             border-radius: 15px;
             box-sizing: border-box;
             height: 20px;
@@ -262,7 +262,7 @@
 
             .left,
             .right {
-                transform: translate3D(0, -50%, 1px);
+                transform: translate3D(0, -50%, 0);
                 position: absolute;
                 top: 50%
             }
