--- a/src/sass/placeholders.scss
+++ b/src/sass/placeholders.scss
@@ -24,5 +24,5 @@
 %cntr {
     left: 50%;
     top: 50%;
-    transform: translate3D(-50%, -50%, 1px);
+    transform: translate3D(-50%, -50%, 0);
 }
